# miet_c_basics

./: .gitignore
old/task1/: CMakeLists.txt
old/task1/src/: t1.c  t2.c
old/task2/: CMakeLists.txt
old/task2/src/: main.c
old/task3/: CMakeLists.txt
old/task3/src/: main.c
old/task4/: CMakeLists.txt
old/task4/src/: main.c
old/task5/: CMakeLists.txt
old/task5/src/: t1.c  t2.c
old/task6/: CMakeLists.txt
old/task6/src/: main.c
old/task7/: CMakeLists.txt
old/task7/src/: main.c
task2/: meson.build
task2/include/: main.h
task2/src/: main.c
task2/subprojects/: llibs.wrap
